# restapi/configure_app.go
@@ -7,8 +7,11 @@ import (
 	"github.com/joho/godotenv"
 	"github.com/samber/do"
 	"github.com/t-kuni/go-web-api-template/di"
+	useCaseCompanies "github.com/t-kuni/go-web-api-template/domain/usecases/companies"
 	useCaseTodos "github.com/t-kuni/go-web-api-template/domain/usecases/todos"
 	"github.com/t-kuni/go-web-api-template/logger"
+	middleware2 "github.com/t-kuni/go-web-api-template/middleware"
+	"github.com/t-kuni/go-web-api-template/restapi/operations/companies"
 	"log"
 	"net/http"
 	"os"
@@ -23,12 +26,24 @@ import (
 
 //go:generate swagger generate server --target ../../go-web-api-template --name App --spec ../swagger.yml --model-package restapi/models --principal interface{}
 
+var app *do.Injector
+
 func configureFlags(api *operations.AppAPI) {
 	// api.CommandLineOptionsGroups = []swag.CommandLineOptionsGroup{ ... }
 }
 
 func configureAPI(api *operations.AppAPI) http.Handler {
-	app := di.NewApp()
+	godotenv.Load()
+
+	if err := logger.SetupLogger(); err != nil {
+		log.Fatalf("Logger initialization failed: %+v", err)
+		os.Exit(1)
+	}
+
+	println("configureAPI()")
+	println("DB_USER: " + os.Getenv("DB_USER"))
+
+	app = di.NewApp()
 
 	// configure the api here
 	api.ServeError = errors.ServeError
@@ -47,6 +62,9 @@ func configureAPI(api *operations.AppAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
+	api.TodosFindTodosHandler = todos.FindTodosHandlerFunc(do.MustInvoke[*useCaseTodos.Find](app).Main)
+	api.CompaniesGetCompaniesHandler = companies.GetCompaniesHandlerFunc(do.MustInvoke[*useCaseCompanies.GetCompanies](app).Main)
+
 	if api.TodosAddOneHandler == nil {
 		api.TodosAddOneHandler = todos.AddOneHandlerFunc(func(params todos.AddOneParams) middleware.Responder {
 			return middleware.NotImplemented("operation todos.AddOne has not yet been implemented")
@@ -57,7 +75,6 @@ func configureAPI(api *operations.AppAPI) http.Handler {
 			return middleware.NotImplemented("operation todos.DestroyOne has not yet been implemented")
 		})
 	}
-	api.TodosFindTodosHandler = todos.FindTodosHandlerFunc(do.MustInvoke[*useCaseTodos.Find](app).Main)
 	if api.TodosUpdateOneHandler == nil {
 		api.TodosUpdateOneHandler = todos.UpdateOneHandlerFunc(func(params todos.UpdateOneParams) middleware.Responder {
 			return middleware.NotImplemented("operation todos.UpdateOne has not yet been implemented")
@@ -83,12 +100,7 @@ func configureTLS(tlsConfig *tls.Config) {
 // This function can be called multiple times, depending on the number of serving schemes.
 // scheme value will be set accordingly: "http", "https" or "unix".
 func configureServer(s *http.Server, scheme, addr string) {
-	godotenv.Load("..")
-
-	if err := logger.SetupLogger(); err != nil {
-		log.Fatalf("Logger initialization failed: %+v", err)
-		os.Exit(1)
-	}
+	println("configureServer()")
 }
 
 // The middleware configuration is for the handler executors. These do not apply to the swagger.json document.
@@ -100,5 +112,7 @@ func setupMiddlewares(handler http.Handler) http.Handler {
 // The middleware configuration happens before anything, this middleware also applies to serving the swagger.json document.
 // So this is a good place to plug in a panic handling middleware, logging and metrics.
 func setupGlobalMiddleware(handler http.Handler) http.Handler {
-	return handler
+	recoverHandler := do.MustInvoke[*middleware2.Recover](app).Recover
+	accessLog := do.MustInvoke[*middleware2.AccessLog](app).AccessLog
+	return recoverHandler(accessLog(handler))
 }
